--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ab4bccc
-	trimbase = 
+	trim = rxros
+	base = 3a431a8
+	trimbase = ab4bccc
 	parent = upstream
 	previous = 636d8cd
