--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fc8bdfa
-	trimbase = 
+	trim = rxros_tf
+	base = 71517b0
+	trimbase = fc8bdfa
 	parent = upstream
 	previous = 636d8cd
