--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3a431a8
+	base = a7a4e44
 	trimbase = 
 	parent = release/melodic/rxros
-	previous = 
+	previous = 3a431a8
