--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 50ac1e7
+	base = dc15e0a
 	trimbase = 
 	parent = debian/melodic/rxros
-	previous = 
+	previous = 50ac1e7
