--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ef4e8d0
+	base = cebe6a2
 	trimbase = 
 	parent = debian/melodic/rxros_tf
-	previous = 
+	previous = ef4e8d0
