--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e561497
+	base = 238a612
 	trimbase = 
 	parent = debian/melodic/rxros
-	previous = 
+	previous = e561497
