--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d523ad6
+	base = ae08e0e
 	trimbase = 
 	parent = debian/melodic/rxros_tf
-	previous = 
+	previous = d523ad6
