--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3a431a8
+	base = dea3c6c
 	trimbase = 
 	parent = release/melodic/rxros
-	previous = 
+	previous = 3a431a8
