--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 71517b0
+	base = 8de0ca1
 	trimbase = 
 	parent = release/melodic/rxros_tf
-	previous = 
+	previous = 71517b0
