--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 247f3ce
+	base = 8378da3
 	trimbase = 
 	parent = rpm/melodic/rxros_tf
-	previous = 
+	previous = 247f3ce
