--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 220330d
-	trimbase = 
+	trim = rxros_tf
+	base = 7554d7e
+	trimbase = 220330d
 	parent = upstream
 	previous = 636d8cd
