--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8f3a00e
-	trimbase = 
+	trim = rxros
+	base = 224f2ec
+	trimbase = 8f3a00e
 	parent = upstream
 	previous = 636d8cd
