--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 224f2ec
+	base = a7fee3a
 	trimbase = 
 	parent = release/kinetic/rxros
-	previous = 
+	previous = 224f2ec
