--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9c2ee8e
+	base = cfb9e5e
 	trimbase = 
 	parent = debian/kinetic/rxros
-	previous = 
+	previous = 9c2ee8e
