--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0ec806a
+	base = 8460c9a
 	trimbase = 
 	parent = debian/kinetic/rxros_tf
-	previous = 
+	previous = 0ec806a
