--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7554d7e
+	base = 791c1f4
 	trimbase = 
 	parent = release/kinetic/rxros_tf
-	previous = 
+	previous = 7554d7e
